--- a/index.html
+++ b/index.html
@@ -1,8 +1,101 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
-  <head>
-    <title>Dylan's GitHub Site</title>
-  </head>
-  <body>
-    <p>So just found out i could do this, so, pretty cool.</p>
-  </body>
+<head>
+	<title>{% block title %}Content Free{% endblock %}</title>
+	<style type="text/css">
+	body {
+		background-image: url('/images/bg5.png');		
+	}
+        img {
+            border: none;
+        }
+        .addthis_button {
+            float: right;
+            clear: left;
+        }
+        .addthis_subscribe_button {
+            float: right;
+            clear: left;
+        }
+	.content {
+		background-color: white;
+		border: 3px outset grey;
+	}
+        .sidebar {
+                position: absolute;
+                height: 100%;
+        }
+	ul.menu {
+	    font-family: arial;
+		font-size: 8pt;
+		font-weight: bold;
+		list-style-type: none;
+		width: 70px;
+		padding: 0px;
+		margin-top: 0px;
+	}
+	ul.menu li {
+		margin-left: 0px;
+		margin: 0px;
+	}
+	ul.menu a {
+		text-decoration: none;
+		display: block;
+		padding: 2px;
+	}
+	ul.menu a:visited {
+		color: blue;
+	}
+	ul.menu a:hover {
+		background-color: #E0FFFF;
+	}
+	div.main {
+		max-width: 800px;
+                min-width: 300px;
+                width: 100%;
+		min-height: 800px;
+		float: left;
+		margin-left: 100px;
+                /*padding-left: 30px;*/
+                margin-bottom: 20px;
+                padding-bottom: 10px;
+	}
+	</style>
+        <link rel="stylesheet" type="text/css" href="/css/contentfree.css"/>
+</head>
+
+<body>
+    <div class="banner">
+		<img src="/images/banner8.png"/>	
+	</div>
+	
+    <div class="sidebar"><ul class="menu content">
+	    <li><a href="/" title="Landing page">
+			   Main</a></li>
+		<li><a href="/blog" title="It's short for Web Log">
+			   Blog</a></li>
+		<li><a href="/ni" title="Image portfolio">
+			   Gallery</a></li>
+		<li><a href="/blog/code" title="Code snippets">
+			   Code Dump</a></li>
+		<li><a href="/ni" title="An endless array of work in progress">
+			   Projects</a></li>
+		<li><a href="/ni" title="A database of pages i have found useful">
+			   Links</a></li>
+		<li><a href="/ni" title="About this site plus contact details">
+			   About</a></li>
+    </ul>
+    <div style="float:left; clear:left">
+        <a name="fb_share" type="button" href="http://www.facebook.com/sharer.php">Share</a>
+        <script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" type="text/javascript"></script>
+        </div>
+        <div style="clear:left">
+<a href="http://www.twitter.com/theotherdylan"><img src="http://twitter-badges.s3.amazonaws.com/twitter-a.png" alt="Follow theotherdylan on Twitter"/></a>
+
+        </div>
+</div>
+    </div>
+	<div class="main content">
+	</div>
+</body>
 </html>
