--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
     </style>
     
 </head>
-<body style="margin:0; width: 945px; height: 800px;">
+<body style="margin:0; width: 945px; height: 800px; background-color:
+#444444;">
     <div style="background-color: #444444; width: 100%;">
         <a href="/"> <img src="/images/cf_banner10.png" style="border:0; margin-left: 20px;"/> </a>
     </div>
     <div>
     <ul class="menu">
-        <li><a href="/blog" title="It's short for Web Log">
-            Blog</a></li>
-        <li><a href="/blog/code" title="Code Snippets">
-            Code Dump</a></li>
+        <li><a href="http://github.com/dylan-evans" title="Git Page">
+            GitHub Page</a></li>
+        <li><a href="https://gist.github.com/dylan-evans" title="Code Snippets">
+            My Gists</a></li>
     </ul></div>
     
     <div style="border-left: 1px solid black; border-right: 1px solid black;
