Work in progress

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
     </ul></div>
     
     <div style="border-left: 1px solid black; border-right: 1px solid black;
-    	float:left; width: 600px; min-height: 600px;">
+    	float:left; width: 600px; min-height: 600px; background-color:
+    white;">
+    	<h1>Work in progress!</h1>
     </div>
     <div style="float: left; padding: 20px;">
     <!-- Test content -->
@@ -67,24 +69,23 @@
     <script>
     new TWTR.Widget({
       version: 2,
-        type: 'profile',
-          rpp: 4,
-            interval: 6000,
-              width: 200,
-                height: 300,
-                  theme: {
-                      shell: {
-                            background: '#ababab',
-                                  color: '#ffffff'
-                                      },
-                                          tweets: {
-                                                background: '#ffffff',
-                                                      color: '#000000',
-                                                            links: '#070feb'
-                                                                }
-                                                                  },
-
-                                                                  features:
+      type: 'profile',
+      rpp: 4,
+      interval: 6000,
+      width: 200,
+      height: 300,
+      theme: {
+        shell: {
+          background: '#ababab',
+          color: '#ffffff'
+        },
+        tweets: {
+          background: '#ffffff',
+          color: '#000000',
+          links: '#070feb'
+        }
+      },
+	features:
                                                                   {
 
                                                                   scrollbar:
