--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@ layout: default
 title: Content Free
 ---
 
-# Test
-------
-
 <div>
   <ul>
   {% for post in site.posts limit:5 %}
     <li><a href="{{post.url}}">{{post.title}}</a></li>
-  {% end %}
+  {% endfor %}
   </ul>
 </div>
