--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 layout: default
 title: Content Free
 ---
+<h1>Welcome</h1>
+<p>This is my personal playground and ranting zone. Please check out my
+blog below or my github repositories to the left. Thanks for visiting.</p>
 
+<h2> Blog</h2>
 <div>
   <ul>
   {% for post in site.posts limit:5 %}
