--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Content Free
 <h1>Welcome</h1>
 <p>This is my personal playground and ranting zone. Please check out my
 blog below or my github repositories to the left. Thanks for visiting.</p>
-
+<p>This is a work in progress</p>
 <h2> Blog</h2>
 <div>
   <ul>
