--- a/index.html
+++ b/index.html
@@ -13,4 +13,9 @@ blog below or my github repositories to the left. Thanks for visiting.</p>
     <li><a href="{{post.url}}">{{post.title}}</a></li>
   {% endfor %}
   </ul>
+<h2>Potential Employers</h2>
+<p>Thank you for taking the time to check me out. This site is most
+certainly beta and degrades in all versions of IE, it looks best in opera.
+Please check out my gists and github repositories, i am new to github but
+this will give you some idea as to what i am about.</p>
 </div>
