--- a/_posts/2011-03-27-my-obsolete-inventory.html
+++ b/_posts/2011-03-27-my-obsolete-inventory.html
@@ -51,7 +51,7 @@ doesn't fit into the modern disposable world.
 network running netbsd, not doing much, since at the time i was on dialup
 and it was a little impractical running a home server. Briefly one of them
 acted as a dialup router and ran a development version of SDFMud where myself
-and occassional vistors worked on a branch of the game. This particular machine 
+and occasional visitors worked on a branch of the game. This particular machine 
 had a 110MHz processor and was a beast in it's time, but i never had an opportunity 
 to use it to it's potential.
 </p>
@@ -124,7 +124,7 @@ Zealand thinking i would do an assignment on it, big mistake.
 the load off my sluggish router. As awkward as the little machine is, it has 
 a future (so long as i don't have to use the keyboard). It is a cool computer 
 with it's small size, solid state drive and upgraded 2GB RAM, it has everything
-you can expect from a modern computer... in miniture.
+you can expect from a modern computer... in miniature.
 
 </p>
 
