--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ title: Content Free
 <h1>Welcome</h1>
 <p>This is my personal playground and ranting zone where i philosophise
 about my code, open source projects and new technology. Check out my
-blog below or my github page and gists to the left.</p>
+blog below or my github page and gists to see what i am working on at 
+the moment.</p>
 
 <h2> Blog</h2>
 <div>
