--- a/_posts/2011-03-27-my-obsolete-inventory.html
+++ b/_posts/2011-03-27-my-obsolete-inventory.html
@@ -76,7 +76,7 @@ obsolete hardware.
 <div class="old_stuff">
 <h2>Dell Power Edge 2750</h2>
 <img src="/images/inventory/dell.jpeg" alt="Dell PowerEdge 2750" />
-<p>A true multi processor machine the Power Edge 2750 came with duel 2.4 Ghz Xeon 
+<p>A true multi processor machine the Power Edge 2750 came with dual 2.4 Ghz Xeon 
 processors and 5 hotswap 73GB scsi drives. I have always been obsessed with multi 
 processors, despite having a dual core desktop at the time, it spoke of the power
 of a true unix machine which i once dreamed about. 
