Changes beta message

--- a/life/life.html
+++ b/life/life.html
@@ -6,10 +6,11 @@ title: Life
 <!-- <script type="text/javascript" src="https://getfirebug.com/firebug-lite.js"></script> -->
 <script type="text/javascript" src="jquery-1.7.2.js"></script>
 <script type="text/javascript" src="life.js"></script>
-<div style="font-style: oblique; color: red">Beta: This might work</div>
 <div id="main-pane"> 
 
-	<h1>Life</h1>
+	<h1>The Game Of Life</h1>
+	<div style="font-style: oblique; color: yellow">Beta: This might work ( <a href="mailto:dylan@dje.me">let me know</a> )</div>
+	
 	<canvas width="600" height="400" id="world"></canvas>
 	
 	<div class="controlbar">
@@ -21,4 +22,5 @@ title: Life
 			<input id="random-button" type="button" value="Random" />
 		</form>
 	</div>
+
 </div>
