--- a/life/life.html
+++ b/life/life.html
@@ -24,3 +24,7 @@ title: Life
 	</div>
 
 </div>
+<p> This is a clone of John Conway's game of life in javascript. The game is as 
+famous for being cool as it is for giving John Conway credit after 40 years. It 
+is already well known and well documented, check out the 
+<a href="http://en.wikipedia.org/wiki/Conway's_Game_of_Life">Wikipedia page</a>.</p>
