Adds frame / step counter

--- a/life/life.html
+++ b/life/life.html
@@ -14,6 +14,8 @@ title: Life
 	<canvas width="600" height="400" id="world"></canvas>
 	
 	<div class="controlbar">
+	
+		<div style="float: left"><em>Frame: <span id="step-counter">0</span></em></div>
 		<form>
 			<input id="start-button" type="button" value="Start" />
 			<input id="step-button" type="button" value="Step" />
