--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: default
 title: Content Free
 ---
 <h1>Welcome</h1>
-<p>This is my personal playground and ranting zone where i philosophise
-about my code, open source projects and new technology. Check out my
-blog below or my github page and gists to see what i am working on at 
-the moment.</p>
+
+<p>This is the home of my ideas, opinions and code snippets. Check out my
+infrequently updated blog below or check out my github page to see what i am 
+working on at the moment.</p>
 
 <h2> Blog</h2>
 <div>
